Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-6670

QDoubleSpinBox with prefix cause text input to fail when text is selected

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 4.6.1
    • 4.6.0
    • None
    • Mac OS X 10.5
    • bb0ab1d8cf57dd4a7b69c8478c2a40c1cd1782e9

    Description

      I found two cases when using the QDoubleSpinBox with a prefix set ($ in my case) the text input cursor is placed in the wrong spot. In the first case if you triple click to select all text or select the text from left to right with the mouse then try and input a number with the keyboard the first digit overwrites the selected text but the input cursor it place between the prefix and the digit just inputed.

      The second case is when you select the text from right to left. When you input a number with the keyboard the text is not replaced and the input cursor is place after the prefix but before the digits. So the new digit get inserted at the front of the number. If the number already was using all digits then nothing will happen.

      I have attacked a ui file that you can load into designer and preview it. The follow the direction on the screen to see what I am talking about..

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            vfm Thierry Bastian (closed Nokia identity) (Inactive)
            shillcock Scott Shillcock
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes