Fix spinbox input when seecting the prefix

If you were selcting the prefix and entering a digit the cursor position
would not be updated correctly

Task-number: QTBUG-6670
Reviewed-by: ogoffart